apps/base/neo4j/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j
spec:
  ports:
    - name: client
      port: 7687
      protocol: TCP
      targetPort: neo4j
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: neo4j
  type: ClusterIP
